--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 
 <body>
   <h1>Etusivu</h1>
+ 
   {% if session.username %}
   <p>
     Olet kirjautunut nimellä {{ session.username }}
@@ -18,7 +19,7 @@
   <p>
     <a href="/logout">Kirjaudu ulos</a>
   </p>
-
+  {{ signup_msg }}
   <form action="/login" method="post">
     <p>
       Tunnus: <br />
