--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,16 @@
   <title>Log in to Powderatlas</title>
 </head>
 
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
+
 <body>
   <h1>Please log in or register a new user</h1>
   {% if session.username %}
@@ -15,7 +25,6 @@
   <a href="/logout">Sign out</a>
   </p>
     {% else %}
-
   <form action="/login" method="post">
     <p>
       Username: <br />
