Rekiströinti- ja kirjausvirheet vaihdettu flash-viesteiksi. Poistettu turhia osia ensimmäisestä kirjautumissysteemistä.

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,36 +2,19 @@
 <html>
 
 <head>
-  <title>Etusivu</title>
+  <title>Powderatlas</title>
 </head>
 
 <body>
-  <h1>Etusivu</h1>
+  <h1>Powderatlas front page</h1>
  
-  {% if session.username %}
   <p>
-    Olet kirjautunut nimellä {{ session.username }}
+  Welcome to Powderatlas {{ username }}
   </p>
   <hr />
-  
-  </p>
-    {% else %}
   <p>
-    <a href="/logout">Kirjaudu ulos</a>
+    <a href="/logout">Log out</a>
   </p>
-  {{ signup_msg }}
-  <form action="/login" method="post">
-    <p>
-      Tunnus: <br />
-      <input type="text" name="username" />
-    </p>
-    <p>
-      Salasana: <br />
-      <input type="password" name="password" />
-    </p>
-    <input type="submit" value="Login" />
-  </form>
-  {% endif %}
 </body>
 
 </html>
