--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,16 @@
         <title>Register a new user</title>
     </head>
 
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    {% endwith %}
+    
     <body>
         <form action="/register" method="post">
             <p>
