--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,11 @@
   </p>
   <hr />
   <p>
+    <a href="/add_spot">Add a new spot</a>
+  </p>
+  
+
+  <p>
     <a href="/logout">Log out</a>
   </p>
 </body>
