Updated schema and added spot browser page

--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -28,6 +28,10 @@
             <input type="text" name="skill_level">
             </p>
             <p>
+                Slope maximum incline:
+            <input type="text" name="max_incline">
+            </p>
+            <p>
                 Notes:
             <input type="text" name="notes">
             </p>
