Added remove.html and functions for deleting a spot from database.

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -14,6 +14,7 @@
         <p>
         {{ spot.title }}
         <a href="/edit_spot/{{ spot.id }}">Edit spot</a>
+        <a href="/remove_spot/{{ spot.id }}">Remove spot</a>
         </p>
         <p>
         {{ spot.area }}
