Added search functionality and page. Created spot pages.

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -12,7 +12,7 @@
         {{ spot.id }}
         </p>
         <p>
-        {{ spot.title }}
+        <a href="/spot/{{ spot.id }}">{{ spot.title }}</a>
         <a href="/edit_spot/{{ spot.id }}">Edit spot</a>
         <a href="/remove_spot/{{ spot.id }}">Remove spot</a>
         </p>
