--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,9 @@
   <p>
     <a href="/browse">Browse spots</a>
   </p>
-  
-
+  <p>
+    <a href="/search">Search spots</a>
+  </p>
   <p>
     <a href="/logout">Log out</a>
   </p>
