Improved access rights: - Require login for each page excluding login and register. - Added user session checks to all requests - Users have access to modify only their own content
Database additions:
- Added datetime stamp to spot database when creating new spots.
- Added image column to spot table schema.

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -13,8 +13,10 @@
         </p>
         <p>
         <a href="/spot/{{ spot.id }}">{{ spot.title }}</a>
-        <a href="/edit_spot/{{ spot.id }}">Edit spot</a>
-        <a href="/remove_spot/{{ spot.id }}">Remove spot</a>
+        {% if spot.user_id == session.user_id %}
+            <a href="/edit_spot/{{ spot.id }}">Edit spot</a>
+            <a href="/remove_spot/{{ spot.id }}">Remove spot</a>
+        {% endif %}
         </p>
         <p>
         {{ spot.area }}
