--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -9,34 +9,35 @@
         <form action="/add_spot" method="post">
             <p>
                 Spot title:
-            <input type="text" name="title">
+            <input type="text" name="title" />
             </p>
             <p>
                 Area:
-            <input type="text" name="area">
+            <input type="text" name="area" />
             </p>
             <p>
                 Country:
-            <input type="text" name="country">
+            <input type="text" name="country" />
             </p>
             <p>
                 Slope aspect:
-            <input type="text" name="aspect">
+            <input type="text" name="aspect" />
             </p>
             <p>
                 Skill level:
-            <input type="text" name="skill_level">
+            <input type="text" name="skill_level" />
             </p>
             <p>
                 Slope maximum incline:
-            <input type="text" name="max_incline">
+            <input type="text" name="max_incline" />
             </p>
             <p>
                 Notes:
-            <input type="text" name="notes">
+            <textarea name="notes" rows="10" cols="100"></textarea>
             </p>
             <p>
-            <input type="submit" value="Submit">
+            <input type="submit" name="submit" value="Submit" />
+            <input type="Submit" name="cancel" value="Cancel" />
             </p>
         </form>
     </body>
