--- a/templates/spot.html
+++ b/templates/spot.html
@@ -28,8 +28,10 @@
         Notes: {{ spot.notes }}
         </p>
         <hr />
-        <a href="/edit_spot/{{ spot.id }}">Edit spot</a>
-        <a href="/remove_spot/{{ spot.id }}">Remove spot</a>
+        {% if spot.user_id == session.user_id %}
+            <a href="/edit_spot/{{ spot.id }}">Edit spot</a>
+            <a href="/remove_spot/{{ spot.id }}">Remove spot</a>
+        {% endif %}
         <a href="/home">Back to front page</a>
         </body>
 </html>
