--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -32,7 +32,7 @@
             </p>
             <p>
                 Notes:
-            <textarea name="notes" value="{{ spot.notes }}" rows="10" cols="100"></textarea>>
+            <textarea name="notes" rows="10" cols="100">{{ spot.notes }}</textarea>
             </p>
             <p>
             <input type="submit" name="update" value="Update" />
