Added hyperlink from registration page to login page

--- a/templates/register.html
+++ b/templates/register.html
@@ -31,5 +31,8 @@
             </p>
             <input type="submit" value="Submit" />
         </form>
+        <p>
+            <a href="/">Back to login</a>
+        </p>
     </body>
 </html>
