Added line breaks to spot messages in spot.html

--- a/templates/spot.html
+++ b/templates/spot.html
@@ -41,7 +41,9 @@
             {{ message.username }} sent at: {{ message.sent_at }}
         </p>
         <p>
-            {{ message.content }}
+            {% for line in message.content.splitlines() %}
+            {{ line }}<br>
+            {% endfor %}
         </p>
         {% endfor %}
 
