--- a/templates/spot.html
+++ b/templates/spot.html
@@ -33,7 +33,12 @@
         Aspect: {{ spot.aspect }}
         </p>
         <p>
-        Notes: {{ spot.notes }}
+        Notes: 
+        </p>
+        <p>
+        {% for line in spot.notes.splitlines() %}
+        {{ line }}<br>
+        {% endfor %}
         </p>
         <hr />
         {% for message in messages %}
