--- a/templates/browse.html
+++ b/templates/browse.html
@@ -34,7 +34,9 @@
         {{ spot.aspect }}
         </p>
         <p>
-        {{ spot.notes }}
+        {% for line in spot.notes.splitlines() %}
+        {{ line }}<br>
+        {% endfor %}
         </p>
         <p>
         Added by: {{ spot.username }}
