--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -9,31 +9,31 @@
         <form action="/add_spot" method="post">
             <p>
                 Spot title:
-            <input type="text" name="title" />
+            <input type="text" name="title" maxlength="100" required/>
             </p>
             <p>
                 Area:
-            <input type="text" name="area" />
+            <input type="text" name="area" maxlength="100" />
             </p>
             <p>
                 Country:
-            <input type="text" name="country" />
+            <input type="text" name="country" maxlength="100" required/>
             </p>
             <p>
                 Slope aspect:
-            <input type="text" name="aspect" />
+            <input type="text" name="aspect" maxlength="10" />
             </p>
             <p>
                 Skill level:
-            <input type="text" name="skill_level" />
+            <input type="text" name="skill_level" maxlength="20" />
             </p>
             <p>
                 Slope maximum incline:
-            <input type="text" name="max_incline" />
+            <input type="text" name="max_incline" maxlength="3" />
             </p>
             <p>
                 Notes:
-            <textarea name="notes" rows="10" cols="100"></textarea>
+            <textarea name="notes" rows="10" cols="100" maxlength="5000"></textarea>
             </p>
             <p>
             <input type="submit" name="submit" value="Submit" />
