--- a/templates/spot.html
+++ b/templates/spot.html
@@ -53,7 +53,7 @@
         {% endfor %}
 
         <form action="/spot/{{ spot.id }}" method="post">
-            <textarea name="content" rows="4" cols="50"></textarea>
+            <textarea name="content" rows="4" cols="50" maxlength="1000" required></textarea>
             <input type="submit" name="submit" />
         </form>
         </body>
