--- a/templates/login.html
+++ b/templates/login.html
@@ -20,11 +20,11 @@
   <form action="/login" method="post">
     <p>
       Username: <br />
-      <input type="text" name="username" />
+      <input type="text" name="username" maxlength="20" required />
     </p>
     <p>
       Password: <br />
-      <input type="password" name="password" />
+      <input type="password" name="password" maxlength="20" required />
     </p>
     <input type="submit" value="Login" />
   </form>
