Search input validation. Not empty and maximum limit.

--- a/templates/search.html
+++ b/templates/search.html
@@ -9,9 +9,9 @@
     <p>
         Search:
         {% if query %}
-        <input type="text" name="query" value="{{ query }}" />
+        <input type="text" name="query" value="{{ query }}" maxlength="100" required/>
         {% else %}
-        <input type="text" name="query" />
+        <input type="text" name="query" maxlength="100" required/>
         {% endif %}
     </p>
     <input type="submit" value="Search" />
