--- a/templates/browse.html
+++ b/templates/browse.html
@@ -19,7 +19,7 @@
         {% endif %}
         </p>
         <p>
-        {{ spot.area }}
+        {{ spot.continent }}
         </p>
         <p>
         {{ spot.country }}
