--- a/templates/spot.html
+++ b/templates/spot.html
@@ -18,7 +18,7 @@
         Added by user: {{ spot.username }}
         </p>
         <p>
-        Area: {{ spot.area }}
+        Continent: {{ spot.continent }}
         </p>
         <p>
         Country: {{ spot.country }}
