--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -11,12 +11,22 @@
             <input type="text" name="title" value="{{ spot.title }}" maxlength="100" required />
             </p>
             <p>
-                Area:
-            <input type="text" name="area" value="{{ spot.area }}" maxlength="100" />
+                Continent:
+            <select name="continent" required>
+                {% for continent in categories.continents %}
+                <option value="{{ continent[0] }}" {% if continent[0] == spot.continent_id %}selected{% endif %}>
+                {{ continent[1] }}</option>
+                {% endfor %}
+            </select>
             </p>
             <p>
                 Country:
-            <input type="text" name="country" value="{{ spot.country }}" maxlength="100" required />
+            <select name="country" required>
+                {% for country in categories.countries %}
+                <option value="{{ country[0] }}" {% if country[0] == spot.country_id %}selected{% endif %}>
+                {{ country[1] }}</option>
+                {% endfor %}
+            </select>
             </p>
             <p>
                 Slope aspect:
@@ -24,7 +34,12 @@
             </p>
             <p>
                 Skill level:
-            <input type="text" name="skill_level" value="{{ spot.skill_level }}" maxlength="20" />
+            <select name="skill_level" required>
+                {% for skill_level in categories.skill_levels %}
+                <option value="{{ skill_level[0] }}" {% if skill_level[0] == spot.skill_level_id %}selected{% endif %}>
+                {{ skill_level[1] }}</option>
+                {% endfor %}
+            </select>
             </p>
             <p>
                 Slope maximum incline:
