--- a/templates/user.html
+++ b/templates/user.html
@@ -8,7 +8,7 @@
         <p>
            {{ user_spot_list | length }} Spots posted by user:
            {% for spot in user_spot_list %}
-           {% if spot.id == user.id %}
+           {% if spot.user_id == user.id %}
            <p><a href="../spot/{{ spot.id }}">{{ spot.title }}</a></p>
            {% endif %}
            {% endfor %}
