--- a/templates/register.html
+++ b/templates/register.html
@@ -19,7 +19,7 @@
         <form action="/register" method="post">
             <p>
                 Username: <br />
-                <input type="text" name="username" maxlength="20" required/>
+                <input type="text" name="username" value="{{ filled.username }}" maxlength="20" required/>
             </p>
             <p>
                 Password: <br />
