--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,9 @@
     <a href="/browse">Browse spots</a>
   </p>
   <p>
+    <a href="/browse_users">Browse users</a>
+  </p>
+  <p>
     <a href="/add_spot">Add a new spot</a>
   </p>
   <p>
