--- a/templates/edit_spot.html
+++ b/templates/edit_spot.html
@@ -49,7 +49,7 @@
             <p>
             <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
             <input type="submit" name="update" value="Update" />
-            <input type="submit" name="cancel" value="Cancel" />
+            <button type="button" onclick="window.history.back()">Cancel</button>
             </p>
         </form>
     </body>
