--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -3,13 +3,23 @@
     <head>
     <title>Add new spot</title>
     </head>
-    
+
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+        <ul>
+        {% for message in messages %}
+        <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+    {% endif %}
+    {% endwith %}
+
     <body>
         <h1>Add new spot</h1>
-        <form action="/add_spot" method="post">
+        <form action="/add_spot" method="post" enctype="multipart/form-data">
             <p>
                 Spot title:
-            <input type="text" name="title" maxlength="100" required/>
+            <input type="text" name="title" value= "{{ filled.title }}" maxlength="100" required/>
             </p>
             <p>
                 Country:
@@ -28,23 +38,32 @@
             </p>
             <p>
                 Slope aspect:
-            <input type="text" name="aspect" maxlength="10" />
+            <input type="text" name="aspect" value= "{{ filled.aspect }}" maxlength="10" />
             </p>
             <p>
                 Skill level:
             <select name="skill_level">
                 {% for skill_level in categories.skill_levels %}
-                <option value="{{ skill_level[0]}}">{{ skill_level[1] }}</option>
+                    <option value="{{ skill_level[0]}}"
+                                    {% if filled.skill_level and filled.skill_level == skill_level[0] %}
+                                    selected
+                                    {% endif %}>
+                        {{ skill_level[1] }}
+                </option>
                 {% endfor %}
             </select>
             </p>
             <p>
                 Slope maximum incline:
-            <input type="text" name="max_incline" maxlength="3" />
+            <input type="text" name="max_incline" value= "{{ filled.max_incline }}" maxlength="3" />
             </p>
             <p>
                 Notes:
-            <textarea name="notes" rows="10" cols="100" maxlength="5000"></textarea>
+            <textarea name="notes" rows="10" cols="100" maxlength="5000">{{ filled.notes }}</textarea>
+            </p>
+            <p>
+                Image:
+            <input type="file" name="image" accept=".jpg">
             </p>
             <p>
             <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
