--- a/templates/spot.html
+++ b/templates/spot.html
@@ -14,6 +14,7 @@
             <a href="/remove_spot/{{ spot.id }}">Remove spot</a>
         {% endif %}
         <hr />
+        <img src="/image/{{ spot.id }}" />
         <p> 
         Added by user: <a href="/user/{{ spot.user_id }}">{{ spot.username }}</a>
         </p>
@@ -44,6 +45,9 @@
         {% for message in messages %}
         <p>
             {{ message.username }} sent at: {{ message.sent_at }}
+            {% if spot.user_id == session.user_id %}
+                <a href="/remove_message/{{ message.id }}">Remove message</a>
+            {% endif %}
         </p>
         <p>
             {% for line in message.content.splitlines() %}
