Added country, continent and spot information to user pages

--- a/templates/user.html
+++ b/templates/user.html
@@ -13,7 +13,10 @@
            {{ user_spot_list | length }} Spots posted by user:
            {% for spot in user_spot_list %}
            {% if spot.user_id == user.id %}
+           <hr />
+           <p>{{ spot.continent_name }} | {{ spot.country_name }}</p>
            <p><a href="../spot/{{ spot.id }}">{{ spot.title }}</a></p>
+           <hr />
            {% endif %}
            {% endfor %}
         </p>
@@ -21,7 +24,10 @@
         <p>
             {{ user_message_list | length }} Messages posted by user:
             {% for message in user_message_list %}
+            <hr />
+            <p>{{ message.spot_title }}</p>
             <p>{{ message.content }}</p>
+            <hr />
             {% endfor %}
             
         </p>
