Added pages to limit spot list

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -46,6 +46,12 @@
         </p>
         <hr />
         {% endfor %}
+        <p>
+        <a href="/{{ page - 1 }}">&lt;&lt;</a>
+        Page {{ page }}/{{ page_count }}
+        <a href="/{{ page + 1 }}">&gt;&gt;</a>
+        </p>
+        <hr />
         <a href="/home">Back to front page</a>
     </body>
 </html>
