--- a/templates/user.html
+++ b/templates/user.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>User {{ user.username }}</h1>
+        <small>Member since {{ user.added_at }}</small>
         <hr />
         <a href="/browse">Back to browse</a>
         <a href="/home">Back to front page</a>
