Added page limit to user listing

--- a/templates/browse.html
+++ b/templates/browse.html
@@ -47,9 +47,9 @@
         <hr />
         {% endfor %}
         <p>
-        <a href="/{{ page - 1 }}">&lt;&lt;</a>
+        <a href="/browse/{{ page - 1 }}">&lt;&lt;</a>
         Page {{ page }}/{{ page_count }}
-        <a href="/{{ page + 1 }}">&gt;&gt;</a>
+        <a href="/browse/{{ page + 1 }}">&gt;&gt;</a>
         </p>
         <hr />
         <a href="/home">Back to front page</a>
