--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -4,15 +4,9 @@
     <title>Add new spot</title>
     </head>
 
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul>
-        {% for message in messages %}
-        <li>{{ message }}</li>
-        {% endfor %}
-        </ul>
-    {% endif %}
-    {% endwith %}
+    {% for message in get_flashed_messages() %}
+        <b>{{ message }}</b>
+    {% endfor %}
 
     <body>
         <h1>Add new spot</h1>
