--- a/templates/login.html
+++ b/templates/login.html
@@ -14,11 +14,11 @@
   
   <form action="/login" method="post">
     <p>
-      Username: <br />
+      <label for="username">Username</label>: <br />
       <input type="text" name="username" maxlength="20" required />
     </p>
     <p>
-      Password: <br />
+      <label for="password">Password</label>: <br />
       <input type="password" name="password" maxlength="20" required />
     </p>
     <input type="submit" value="Login" />
