--- a/templates/register.html
+++ b/templates/register.html
@@ -14,15 +14,15 @@
     <body>
         <form action="/register" method="post">
             <p>
-                Username: <br />
+                <label for="username">Username</label>: <br />
                 <input type="text" name="username" value="{{ filled.username }}" maxlength="20" required/>
             </p>
             <p>
-                Password: <br />
+                <label for="password">Password</label>: <br />
                 <input type="password" name="password1" maxlength="20" required/>
             </p>
             <p>
-                Repeat password: <br />
+                <label for="repeat_password">Repeat password</label>: <br />
                 <input type="password" name="password2" maxlength="20" required/>
             </p>
             <input type="submit" value="Submit" />
