Added stylesheet and initial styling to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-
+ <link rel="stylesheet" href="/static/main.css">
+ 
 <head>
   <title>Powderatlas</title>
 </head>
 
 <body>
-  <h1>Powderatlas front page</h1>
- 
+  <div class="header">
+  <h1>Powderatlas</h1>
+  </div>
+  <div class="nav">
+
+  </div>
+  <div class="content">
   <p>
   Welcome to Powderatlas {{ username }}
   </p>
@@ -27,6 +33,7 @@
   <p>
     <a href="/logout">Log out</a>
   </p>
+  </div>
 </body>
 
 </html>
