Added navbar and styling

--- a/static/main.css
+++ b/static/main.css
@@ -11,7 +11,26 @@ body {
 }
 
 .nav {
-    background-color: lightgrey;
+    background-color: rgba(45, 68, 101, 0.5);
+}
+
+nav {
+  text-align: center;
+}
+
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+
+nav li {
+  display: inline-block;
+  padding: 0 1.5em;
+  margin: 0;
+}
+
+nav li:not(:last-of-type) {
+  border-right: 1px solid black;
 }
 
 .content {
