--- a/templates/index.html
+++ b/templates/index.html
@@ -7,31 +7,30 @@
 </head>
 
 <body>
-  <div class="header">
-  <h1>Powderatlas</h1>
-  </div>
-  <div class="nav">
+    <div class="header">
+    <h1>Powderatlas</h1>
+    </div>
 
-  </div>
+  <div class="nav">
+      <nav>
+        <ul>
+          <li><a href="/">Front page</a></li>
+          <li><a href="/add_spot">Add a new spot</a></li>
+          <li><a href="/browse">Spots</a></li>
+          <li><a href="/browse_users">Users</a></li>
+          <li><a href="/search">Search spots</a></li>
+          <li><a href="/logout">Log out</a></li>
+        </ul>
+      </nav>
+    </div>
+
   <div class="content">
   <p>
   Welcome to Powderatlas {{ username }}
   </p>
   <hr />
   <p>
-    <a href="/browse">Browse spots</a>
-  </p>
-  <p>
-    <a href="/browse_users">Browse users</a>
-  </p>
-  <p>
-    <a href="/add_spot">Add a new spot</a>
-  </p>
-  <p>
-    <a href="/search">Search spots</a>
-  </p>
-  <p>
-    <a href="/logout">Log out</a>
+
   </p>
   </div>
 </body>
