Added stylesheet links

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-
 <html>
+<link rel="stylesheet" href="/static/main.css">
+
     <head>
         <title>Register a new user</title>
     </head>
