--- a/templates/add_spot.html
+++ b/templates/add_spot.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="/static/main.css">
+
     <head>
     <title>Add new spot</title>
     </head>
