--- a/templates/remove.html
+++ b/templates/remove.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="/static/main.css">
+
     <head>
         <title>Remove spot</title>
     </head>
