--- a/templates/user.html
+++ b/templates/user.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="/static/main.css">
+
     <head>
         <title>User page</title>
     </head>
