Added user page to navbar

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,7 @@
           <li><a href="/browse">Spots</a></li>
           <li><a href="/browse_users">Users</a></li>
           <li><a href="/search">Search spots</a></li>
+          <li><a href="/user/{{ session.user_id }}">User page</a></li>
           <li><a href="/logout">Log out</a></li>
         </ul>
       </nav>
