--- a/templates/search.html
+++ b/templates/search.html
@@ -5,7 +5,12 @@
     <head>
         <title>Spot search</title>
     </head>
+    
     <body>
+        <div class="header">
+            <h1>Search spots</h1>
+        </div>
+        <div class="content">
     <p>
     <form action="/search" method="get">
     <p>
@@ -33,5 +38,6 @@
         </ul>
         {% endif %}
     <a href="/home">Back to front page</a>
+        </div>
     </body>
 </html>
