--- a/templates/browse.html
+++ b/templates/browse.html
@@ -7,7 +7,11 @@
     </head>
 
     <body>
+        <div class="header">
         <h1>Browse spots</h1>
+        </div>
+
+        <div class="content">
         <hr />
         <a href="/home">Back to front page</a>
         <a href="/add_spot">Add new spot</a>
@@ -55,5 +59,6 @@
         </p>
         <hr />
         <a href="/home">Back to front page</a>
+        </div>
     </body>
 </html>
