--- a/templates/browse_users.html
+++ b/templates/browse_users.html
@@ -7,11 +7,15 @@
     </head>
 
     <body>
+        <div class="header">
         <h1>Browse users</h1>
+        </div>
+
         <hr />
         <a href="/home">Back to front page</a>
         <a href="/user/{{ session.user_id }}">Own user page</a>
         <hr />
+        <div class="content">
         {% for user in user_list|sort (attribute='username') %}
         <p>
         <h2><a href="/user/{{ user.id }}">{{ user.username }}</a></h2> Member since {{ user.added_at }}
@@ -25,5 +29,6 @@
         </p>
         <hr />
         <a href="/home">Back to front page</a>
+        </div>
     </body>
 </html>
