--- a/templates/remove.html
+++ b/templates/remove.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <div class="content">
         <p>
             Are you sure you want to remove {{ spot.title }}?
         </p>
@@ -15,5 +16,6 @@
             <input type="submit" name="yes" value="Yes" />
             <input type="submit" name="cancel" value="Cancel" />
         </form>
+        </div>
     </body>
 </html>
