--- a/templates/remove_message.html
+++ b/templates/remove_message.html
@@ -7,6 +7,7 @@
     </head>
 
     <body>
+        <div class="content">
         <p>
             Are you sure you want to remove this message?
         </p>
@@ -18,5 +19,6 @@
             <input type="submit" name="yes" value="Yes" />
             <input type="submit" name="cancel" value="Cancel" />
         </form>
+        </div>
     </body>
 </html>
